WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111243
REGRESSION (
r144517
): IndexedDB layout test failures on GTK
https://bugs.webkit.org/show_bug.cgi?id=111243
Summary
REGRESSION (r144517): IndexedDB layout test failures on GTK
Zan Dobersek
Reported
2013-03-01 22:26:14 PST
A set of layout tests began failing after
r144517
.
http://trac.webkit.org/changeset/144517
storage/indexeddb/index-basics.html storage/indexeddb/mozilla/create-objectstore-basics.html storage/indexeddb/mozilla/global-data.html storage/indexeddb/mozilla/indexes.html storage/indexeddb/objectstore-autoincrement.html storage/indexeddb/objectstore-basics.html storage/indexeddb/readonly.html storage/indexeddb/mozilla/create-index-unique.html A sample diff for the failure in storage/indexeddb/index-basics.html: --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/storage/indexeddb/index-basics-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/storage/indexeddb/index-basics-actual.txt @@ -27,7 +27,7 @@ PASS 'objectStore' in indexObject is true PASS indexObject.objectStore.name is "storeName" PASS 'keyPath' in indexObject is true -PASS indexObject.keyPath is "x" +FAIL indexObject.keyPath should be x (of type string). Was undefined (of type undefined). PASS 'unique' in indexObject is true PASS 'multiEntry' in indexObject is true PASS indexObject.unique is false Given the changes in
r144517
it seems JSC bindings require modification.
Attachments
Patch
(5.54 KB, patch)
2013-03-02 13:08 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-03-02 13:08:50 PST
Created
attachment 191116
[details]
Patch
Zan Dobersek
Comment 2
2013-03-02 23:15:19 PST
Comment on
attachment 191116
[details]
Patch Clearing flags on attachment: 191116 Committed
r144559
: <
http://trac.webkit.org/changeset/144559
>
Zan Dobersek
Comment 3
2013-03-02 23:15:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug