REGRESSION (r144517): IndexedDB layout test failures on GTK https://bugs.webkit.org/show_bug.cgi?id=111243

Reviewed by Martin Robinson.

Source/WebCore:

Changes to the custom JSC bindings for IDBAny are required after r144517,
specifically the case of IDBAny object having the KeyPathType type has to be covered.
These changes are analogous to those made to the V8 bindings in the mentioned commit.

No new tests - already covered by existing tests.

* bindings/js/JSIDBAnyCustom.cpp:
(WebCore::toJS): A helper function that wraps an IDBKeyPath into a JSValue.
(WebCore): Shuffle the order inside the switch statement a bit to match the V8 custom bindings.
Cover the case where the IDBAny object has the KeyPathType, calling the new helper method.

LayoutTests:

* platform/gtk/TestExpectations: Removing failure expectations for IDB tests that again pass.


Canonical link: https://commits.webkit.org/129610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144559 268f45cc-cd09-0410-ab3c-d52691b4dbfc