Source/WebCore/bindings/js/JSIDBAnyCustom.cpp
@@ -52,6 +52,24 @@ using namespace JSC;
 
 namespace WebCore {
 
+JSValue toJS(ExecState* exec, JSDOMGlobalObject* globalObject, const IDBKeyPath& value)
+{
+    switch (value.type()) {
+    case IDBKeyPath::NullType:
+        return jsNull();
+    case IDBKeyPath::StringType:
+        return jsStringWithCache(exec, value.string());
+    case IDBKeyPath::ArrayType:
+        RefPtr<DOMStringList> keyPaths = DOMStringList::create();
+        for (Vector<String>::const_iterator it = value.array().begin(); it != value.array().end(); ++it)
+            keyPaths->append(*it);
+        return toJS(exec, globalObject, keyPaths.release());
+    }
+
+    ASSERT_NOT_REACHED();
+    return jsUndefined();
+}
+
 JSValue toJS(ExecState* exec, JSDOMGlobalObject* globalObject, IDBAny* idbAny)
 {
     if (!idbAny)
@@ -80,10 +98,12 @@ JSValue toJS(ExecState* exec, JSDOMGlobalObject* globalObject, IDBAny* idbAny)
         return toJS(exec, globalObject, idbAny->idbTransaction());
     case IDBAny::ScriptValueType:
         return idbAny->scriptValue().jsValue();
-    case IDBAny::IntegerType:
-        return jsNumber(idbAny->integer());
     case IDBAny::StringType:
         return jsStringWithCache(exec, idbAny->string());
+    case IDBAny::IntegerType:
+        return jsNumber(idbAny->integer());
+    case IDBAny::KeyPathType:
+        return toJS(exec, globalObject, idbAny->keyPath());
     }
 
     ASSERT_NOT_REACHED();
